--- a/duyen.ipynb
+++ b/duyen.ipynb
@@ -4,6 +4,92 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# **A/ Crawl Data**\n",
+    "Crark data from tiki website"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import pandas as pd\n",
+    "# import requests\n",
+    "# import time\n",
+    "# import random\n",
+    "# from tqdm import tqdm\n",
+    "\n",
+    "# headers = {\n",
+    "#     'User-Agent': 'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/125.0.0.0 Safari/537.36',\n",
+    "#     'Accept': 'application/json, text/plain, */*',\n",
+    "#     'Accept-Language': 'en,vi;q=0.9,vi-VN;q=0.8',\n",
+    "#     'Referer': 'https://tiki.vn/nha-sach-tiki/c8322',\n",
+    "#     'x-guest-token': '2eg3LBsfkKz7pVmEbIO0RGDJvyuAjq8P',\n",
+    "#     'Connection': 'keep-alive',\n",
+    "#     'TE': 'Trailers',\n",
+    "#     'cookies' : '_trackity=egitd3a3fab-1c64-dc2a-90a8-1b295cf588de; TOKENS={%22access_token%22:%222eg3LBsfkKz7pVmEbIO0RGDJvyuAjq8P%22%2C%22expires_in%22:157680000%2C%22expires_at%22:1872394520776%2C%22guest_token%22:%222eg3LBsfkKz7pVmEbIO0RGDJvyuAjq8P%22}; delivery_zone=Vk4wNjcwMDcwMjY=; tiki_client_id=; TIKI_RECOMMENDATION=3c1cbf2a9169320a596dcef977415718; TKSESSID=f74f5d35109ffb184e445005d5f66241'\n",
+    "# }\n",
+    "# params = (\n",
+    "#     ('platform', 'web'),\n",
+    "#     ('spid','74021318'),\n",
+    "#     ('version', '3')\n",
+    "# )\n",
+    "    \n",
+    "# def parser_product(json):\n",
+    "#     d = dict()\n",
+    "#     d['id'] =json.get('id')\n",
+    "#     d['name'] =json.get('name')\n",
+    "#     d['authors'] =json.get(\"authors\", [{}])[0].get(\"name\")\n",
+    "#     d['original_price'] =json.get('original_price')\n",
+    "#     d['price'] =json.get('price')\n",
+    "#     d['categories'] = json.get(\"categories\", {}).get(\"name\")\n",
+    "#     d['all_time_quantity_sold'] =json.get('all_time_quantity_sold')\n",
+    "#     d['rating_average'] =json.get('rating_average')\n",
+    "#     d['review_count'] =json.get('review_count')\n",
+    "#     specifications = json.get(\"specifications\", [])\n",
+    "#     general_info = next((item for item in specifications if item.get(\"name\") == \"Thông tin chung\"), {})\n",
+    "#     attributes = general_info.get(\"attributes\", [])\n",
+    "#     d['pages'] = next((attr.get(\"value\") for attr in attributes if attr.get(\"code\") == \"number_of_page\"), None)\n",
+    "#     d['manuafacture'] = next((attr.get(\"value\") for attr in attributes if attr.get(\"code\") == \"manufacturer\"), None)\n",
+    "#     return d\n",
+    "\n",
+    "# df_id = pd.read_csv('productId_book.csv')\n",
+    "# p_ids = df_id.id.to_list()\n",
+    "# print(p_ids)\n",
+    "# result =[]\n",
+    "# for pid in tqdm(p_ids, total=len(p_ids)):\n",
+    "#     response = requests.get('https://tiki.vn/api/v2/products/{}'.format(pid), headers=headers, params=params)\n",
+    "#     if response.status_code == 200:\n",
+    "#         try:\n",
+    "#             # response.encoding = 'utf-8'\n",
+    "#             print('Crawl data {} success !!!'.format(pid))\n",
+    "#             result.append(parser_product(response.json()))\n",
+    "#         except requests.exceptions.JSONDecodeError:\n",
+    "#             print(\"Lỗi: Phản hồi không phải là JSON hợp lệ.\")\n",
+    "#             print(\"Nội dung phản hồi:\", response.text) \n",
+    "#     else:\n",
+    "#         print(f\"Lỗi HTTP {response.status_code}: {response.reason}\")\n",
+    "\n",
+    "# df_product = pd.DataFrame(result)\n",
+    "# df_product.to_csv('productDetailData.csv', index = False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# **B/ Build the Models**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "notebookRunGroups": {
+     "groupValue": "1"
+    }
+   },
+   "source": [
     "# **1. Import Libraries and Frameworks**"
    ]
   },
