--- a/duyen.ipynb
+++ b/duyen.ipynb
@@ -936,7 +936,7 @@
    ],
    "source": [
     "correlation_matrix = df.corr()\n",
-    "sns.heatmap(correlation_matrix, annot=True, cmap=\"seagreen\")"
+    "sns.heatmap(correlation_matrix, annot=True, cmap=\"coolwarm\")"
    ]
   },
   {
